--- a/000_johannes/03/analysis/analysis.ipynb
+++ b/000_johannes/03/analysis/analysis.ipynb
@@ -29,8 +29,8 @@
     "CREATE_DOCX = True\n",
     "CREATE_SVG = True\n",
     "\n",
-    "outputDir = os.path.join('.', 'output')\n",
-    "# outputDir = os.path.join('/home/jbecker', 'windows')"
+    "#outputDir = os.path.join('.', 'output')\n",
+    "outputDir = os.path.join('/home/jbecker', 'windows')"
    ]
   },
   {
@@ -3679,7 +3679,7 @@
     "    def reduceGenStat(genStat):\n",
     "        gs = genStat.reset_index()\n",
     "        return gs[gs[('inputLengthInCharacters','')].isin(\n",
-    "            [2 ** i for i in range(8,32+8,8)]\n",
+    "            [2 ** i for i in [19, 23, 27, 31]]\n",
     "        )].drop([(a,b) for a, b in gs.columns if a == 'timeTransferFromDevice'], axis=1)\n",
     "    genStat128Reduced = reduceGenStat(genStat128)\n",
     "    genStatLetterReduced = reduceGenStat(genStatLetter)\n",
