Architecture = 70, analysis for hand-in

--- a/000_johannes/03/analysis/analysis.ipynb
+++ b/000_johannes/03/analysis/analysis.ipynb
@@ -29,8 +29,8 @@
     "CREATE_DOCX = True\n",
     "CREATE_SVG = True\n",
     "\n",
-    "#outputDir = os.path.join('.', 'output')\n",
-    "outputDir = os.path.join('/home/jbecker', 'windows')"
+    "outputDir = os.path.join('.', 'output')\n",
+    "#outputDir = os.path.join('/home/jbecker', 'windows')"
    ]
   },
   {
@@ -453,7 +453,7 @@
     "        for i, entry in enumerate(bcNonZeroRel):\n",
     "            row = table.rows[i+1].cells\n",
     "            code = entry['code']\n",
-    "            row[0].text = f'{code:0.0f}' + (f' (‘{chr(code)}’)' if code >= 32 else '')\n",
+    "            row[0].text = f'{code:0.0f}' + (f' (‚{chr(code)}‘)' if code >= 32 else '')\n",
     "            row[1].text = f'{entry[\"h\"]:0.0f}'\n",
     "            row[2].text = f'{entry[\"f\"]*100:.3f} %'\n",
     "            row[0].paragraphs[0].alignment = docx.enum.text.WD_ALIGN_PARAGRAPH.RIGHT\n",
