Analysis, architecture in Makefile

--- a/000_johannes/01_abgabe/analysis/analysis.ipynb
+++ b/000_johannes/01_abgabe/analysis/analysis.ipynb
@@ -31,8 +31,8 @@
     "CREATE_DOCX = True\n",
     "CREATE_SVG = True\n",
     "\n",
-    "# outputDir = os.path.join('.', 'output')\n",
-    "outputDir = os.path.join('/home/jbecker', 'windows')"
+    "outputDir = os.path.join('.', 'output')\n",
+    "# outputDir = os.path.join('/home/jbecker', 'windows')"
    ]
   },
   {
