Preparing the analysis

--- a/000_johannes/dbscan/abgabe/demo/inspect.ipynb
+++ b/000_johannes/dbscan/abgabe/demo/inspect.ipynb
@@ -13,7 +13,8 @@
     "import pandas as pd\n",
     "import io\n",
     "import matplotlib.pyplot as plt\n",
-    "import json"
+    "import json\n",
+    "import re"
    ]
   },
   {
@@ -23,13 +24,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fileNames = glob.glob(os.path.join('..', 'measurements', '20250226-104107989', '*.json'))\n",
-    "dfsWithNames = []\n",
+    "fileNames = glob.glob(os.path.join('..', 'measurements', '20250226-111240991', '*.json'))\n",
+    "dcts = []\n",
     "for fileName in fileNames:\n",
     "    with open(fileName, 'r') as file:\n",
     "        dct = json.load(file)\n",
-    "        df = pd.DataFrame(dct['output'])\n",
-    "        dfsWithNames.append({ 'name': os.path.basename(fileName), 'df': df })"
+    "        dct['name'] = os.path.basename(fileName)\n",
+    "        dcts.append(dct)\n",
+    "        \n",
+    "for dct in dcts:        \n",
+    "    df = pd.DataFrame(dct['output'])\n",
+    "    dfsWithNames.append({ 'name': dct['name'], 'df': df })"
    ]
   },
   {
@@ -60,13 +65,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "set(df['cluster_id'])"
+    "def makeProfileDf():\n",
+    "\n",
+    "    def extractNClusters(s):\n",
+    "        pattern = r'.*-([^-]+)-(\\d+)-(\\d+)-(\\d+).json'\n",
+    "        match = re.match(pattern, s)\n",
+    "        kernel, nClusters, nPoints, idx = match.groups()\n",
+    "        return nClusters\n",
+    "        \n",
+    "    def extractNPoints(s):\n",
+    "        pattern = r'.*-([^-]+)-(\\d+)-(\\d+)-(\\d+).json'\n",
+    "        match = re.match(pattern, s)\n",
+    "        kernel, nClusters, nPoints, idx = match.groups()\n",
+    "        return nPoints\n",
+    "        \n",
+    "    def extractKernel(s):\n",
+    "        pattern = r'.*-([^-]+)-(\\d+)-(\\d+)-(\\d+).json'\n",
+    "        match = re.match(pattern, s)\n",
+    "        kernel, nClusters, nPoints, idx = match.groups()\n",
+    "        return kernel\n",
+    "\n",
+    "    nameLst = [ dct['name'] for dct in dcts ]\n",
+    "    nClustersLst = [ int(extractNClusters(dct['name'])) for dct in dcts ]\n",
+    "    nPointsLst = [ int(extractNPoints(dct['name'])) for dct in dcts ]\n",
+    "    timeTotalLst = [ dct['profile']['timeTotal'] for dct in dcts ]\n",
+    "    kernelLst = [ extractKernel(dct['name']) for dct in dcts ]\n",
+    "    return pd.DataFrame({\n",
+    "        'name': nameLst,\n",
+    "        'kernel': kernelLst,\n",
+    "        'n_clusters': nClustersLst,\n",
+    "        'n_points': nPointsLst,\n",
+    "        'time_total': timeTotalLst\n",
+    "    })\n",
+    "\n",
+    "profileDf = makeProfileDf()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e3d267c-71e1-4808-87e7-adddacda42fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profileDf.info()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4e30dd9f-16c6-4f77-a334-c52287aaa205",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for nClusters, grp in profileDf.groupby('n_clusters'):\n",
+    "    plt.figure(figsize=(4,3))\n",
+    "    for kernel, ggrp in grp.groupby('kernel'):\n",
+    "        ggrp = ggrp.sort_values('n_points')\n",
+    "        plt.plot(ggrp['n_points'], ggrp['time_total'], label=kernel, marker='x')\n",
+    "    plt.title(f'{nClusters}')\n",
+    "    plt.xscale('log')\n",
+    "    plt.yscale('log')\n",
+    "    plt.legend()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e58b6f18-d99b-4a0d-847d-8f3a9fd7079d",
    "metadata": {},
    "outputs": [],
    "source": []
